[tool.poetry]
name = "satflow"
version = "0.1.0"
description = ""
authors = ["Alexandros Vythoulkas <alvythoulkas@protonmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
prefect = { version = "^0.14.10", extras= ["viz"]}
sentinelsat = "^0.14"
numpy = "^1.20.1"
landsatxplore = { git = "https://github.com/alexVyth/landsatxplore.git" }
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.format]
max-line-length = "88"

[tool.black]
line-length = 88
